[Frontend][Misc] Fixed footer overlapping content
Took 14 minutes

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 body {
     padding: 0;
-    margin: 0 0 100px 0;
+    margin: 0;
     width: 100%;
     height: 100%;
 }
@@ -25,6 +25,14 @@ footer {
     width: 100%;
     background: white;
     box-shadow: 3px 5px 10px rgba(123,123,123,0.5);
+}
+
+#content {
+    width: 100%;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
 }
 
 .panel {
