--- a/src/main/resources/static/css/startpage.css
+++ b/src/main/resources/static/css/startpage.css
@@ -6,11 +6,3 @@ footer {
 
 }
 
-
-#content {
-    width: 100%;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
